MEFA4 VERSIONS

Version 0.3-1 -- Nov 7, 2013
    * stack method for Mefa objects:
      column labels for taxa tables fixed.

Version 0.3-0 -- Sept 25, 2013
    * Spell check completed using utils:::aspell.
    * Import methods pkg in namespace to satisfy R 3.0.2 checks.
    * Depends: R (>= 2.14.0) because vignette directory has moved.

Version 0.2-9 -- July 11, 2013
    * Xtab: 1-row/col matrices dropped dimnames -- now fixed.
    * Vignette moved to vignettes from inst/doc.

Version 0.2-8 -- July 6, 2012
    * mbind2: inner set is based on x+y instead of left join x.
      Methods for matrix and sparse matrix classes, but not for
      Mefa where the sum is not trivial.
    * nonDuplicated gained na.rm argument to handle 
      possible duplicates in row names.

Version 0.2-7 -- May 2, 2012
    * inst/COPYING removed.
    * stack method added to Mefa class.
    * groupSums, groupMeans: failed when join was "inner" and both
      samp and taxa slots of the new object were NULL. Check
      on NULL attribute table related join type is now relaxed
      for object class Mefa (reported by D. Stralberg).
    * mbind uses drop=TRUE to protect single column/row cases.

Version 0.2-6 -- March 19, 2012
    * Rd link to Matrix:::xtabs removed (sparse=TRUE is in
      stats:::xtabs). Reported by Uwe Ligges.

Version 0.2-5 -- October 18, 2011
    * Startup message: line break removed.

Version 0.2-4 -- August 23, 2011
    * groupMeans: NA handling changed, mean is calculated
      as dividing by the non NA values when collapsing.

Version 0.2-3 -- July 9, 2011
    * packageStartupMessage used in zzz.R .onAttach
    * Typos fixed in vignette and help pages.
    * 1x1 dim issues fixed again using drop=FALSE
      at many places (Mefa, <-, [, mbind).
    * typo corrected in mbind for Mefa objects that
      left TAXAPART temp variable in result.
    * samp/taxa table handling in mbind for Mefa objects
      is revised, not using default merge(..., all=TRUE).